# POC_AI_TESTING

./: readme
ai-browser-automation/playwright-server/manual_cases/: dev-amber_dev_clippd_com_.json  dev-amber_dev_clippd_com_welcome.json  google_com.json  visit google_com.json
ai-browser-automation/playwright-server/playwright-report/: index.html
ai-browser-automation/playwright-server/src/: index.ts
ai-browser-automation/playwright-server/test-results/: .last-run.json
ai-browser-automation/playwright-server/tests/: autosaved_backup.spec.ts  google_test.spec.ts
ai-browser-automation/python-client/: agent.py  ai_handler.py  code_generator.py  generators.py  healer.py  main.py  n8n_agent.py  simple_test.py  test_brain.py  validator.py
ai-browser-automation/python-client/agents/: assistant.py
ai-browser-automation/python-client/core/: ai.py  list_model.py
backend/: Dockerfile  agent_service.py  browser_tools.py  llm_provider.py  main.py  pyproject.toml  requirements.txt
backend/playwright-server/: package-lock.json  package.json  tsconfig.json
backend/python-client/: api_server.py  requirements.txt
backend/python-client/agents/: architect.py  assistant.py
backend/python-client/core/: agent_engine.py  ai.py  mcp_client.py
backend/python-client/utils/: file_parser.py  generators.py  optimizer.py  reporter.py
backend/python-client/workflow/: engine.py  nodes.py
frontend/: drizzle.config.ts  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/db/: index.ts  schema.ts
frontend/src/app/: page.tsx
(+22 files in other folders)
