[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.124.4",
    "google-generativeai>=0.8.5",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "openai>=2.11.0",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.0.3",
    "uvicorn>=0.38.0",
]
